--- a/7-28-django/blog/templates/blog/post_list.html
+++ b/7-28-django/blog/templates/blog/post_list.html
@@ -1,8 +1,14 @@
-<html>
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 
-<body>
-  <p>Hi there!</p>
-  <p>It works!</p>
-</body>
+<div>
+  <h1><a href="/">Django Girls Blog</a></h1>
+</div>
 
-</html>
+{% for post in posts %}
+  <div>
+      <p>published: {{ post.published_date }}</p>
+      <h1><a href="">{{ post.title }}</a></h1>
+      <p>{{ post.text|linebreaksbr }}</p>
+  </div>
+{% endfor %}
